# dockershit

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
scripts/: install-dev.sh  install.sh  venv.sh
src/dockershit/: docker.py  docker_file.py  dockershit.py  keyboard.py
tests/: test_command.py  test_docker.py  test_docker_file.py  test_dockershit.py  test_input.py  test_keyboard.py
